--- a/index.html
+++ b/index.html
@@ -8,32 +8,24 @@
   <meta name="CocoaVersion" content="1138.32">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; min-height: 14.0px}
     span.s1 {text-decoration: underline ; color: #0000ee}
-    span.Apple-tab-span {white-space:pre}
   </style>
 </head>
 <body>
 <p class="p1">&lt;html&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;head&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;title&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;/title&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;/head&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;body&gt;</p>
+<p class="p1">&lt;body&gt;</p>
 <p class="p1">&lt;center&gt;</p>
-<p class="p1">&lt;!-- Put the body of your page below this line --&gt;</p>
 <p class="p1">&lt;FONT FACE="Edwardian Script ITC"&gt;</p>
 <p class="p1">&lt;font size="40"&gt;</p>
 <p class="p1">Welcome to Weddings and Wishes.<span class="Apple-converted-space"> </span></p>
 <p class="p1">&lt;br&gt;</p>
-<p class="p1">&lt;br&gt;While we're working on our site, here's a preview of what we're about. &lt;br&gt;<span class="Apple-converted-space"> </span></p>
+<p class="p1">&lt;br&gt;While we're working on our site, here's a preview of what we're about.</p>
+<p class="p1">&lt;br&gt;<span class="Apple-converted-space"> </span></p>
 <p class="p1">For more information, call us at +91 9845001401</p>
 <p class="p1">&lt;/font&gt;</p>
 <p class="p1">&lt;/FONT&gt;</p>
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
-<p class="p1">&lt;!-- Put the body of your page above this line --&gt;</p>
-<p class="p2"><br></p>
 <p class="p1">&lt;img src="<a href="view-source:file:///Users/kiransaldanha/Desktop/html/pic.png"><span class="s1">pic.png</span></a>" border="0"&gt;</p>
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
