--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p class="p1">&lt;html&gt;</p>
 <p class="p1">&lt;body&gt;</p>
 <p class="p1">&lt;center&gt;</p>
+<p class="p1">&lt;/center&gt;</p>
 <p class="p1">&lt;FONT FACE="Edwardian Script ITC"&gt;</p>
 <p class="p1">&lt;font size="40"&gt;</p>
 <p class="p1">Welcome to Weddings and Wishes.<span class="Apple-converted-space"> </span></p>
