--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <meta name="CocoaVersion" content="1138.32">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times}
-    span.s1 {text-decoration: underline ; color: #0000ee}
+    p.p2 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; color: #0000ee}
+    span.s1 {color: #000000}
+    span.s2 {text-decoration: underline}
   </style>
 </head>
 <body>
@@ -27,7 +29,7 @@
 <p class="p1">&lt;/FONT&gt;</p>
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
-<p class="p1">&lt;img src="<a href="view-source:file:///Users/kiransaldanha/Desktop/html/pic.png"><span class="s1">pic.png</span></a>" border="0"&gt;</p>
+<p class="p2"><span class="s1">&lt;img src="</span><span class="s2">weddingsnadwishes website poster.png"</span><span class="s1"> border="0"&gt;</span></p>
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
@@ -40,7 +42,7 @@
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
 <p class="p1">&lt;br&gt;</p>
-<p class="p1">&lt;img src="<a href="view-source:file:///Users/kiransaldanha/Desktop/html/pic2.png"><span class="s1">pic2.png</span></a>" border="0"&gt;</p>
+<p class="p2"><span class="s1">&lt;img src="</span><span class="s2">mothersday mother daughter poster.png"</span><span class="s1"> border="0"&gt;</span></p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
