Renamed images, extracted css

--- a/index.html
+++ b/index.html
@@ -1,62 +1,33 @@
 <html>
 
+<head>
+<link rel="StyleSheet" href="css/styles.css" type="text/css">
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30565508-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+</head>
 <body>
+	<center>
+		<h1>
+			Welcome to Weddings and Wishes
+		</h1>
 
-<center>
-
-</center>
-
-<FONT FACE="Edwardian Script ITC">
-
-<font size="40">
-
-Welcome to Weddings and Wishes. 
-
-<br>
-
-<br>While we're working on our site, here's a preview of what we're about.
-
-<br> 
-
-For more information, call us at +91 9845001401
-
-</font>
-
-</FONT>
-
-<br>
-
-<br>
-
-<img src="weddingsnadwishes website poster.png" border="0">
-
-<br>
-
-<br>
-
-<br>
-
-<br>
-
-
-<FONT FACE="Edwardian Script ITC"> 
-
-<font size="40">
-
-For your Mother's Day Gifting solution needs:
-
-</font>
-
-<br>
-
-<br>
-
-<br>
-
-<br>
-
-<img src="mothersday mother daughter poster.png" border="0">
-
+		<p class="message">While we're working on our site, here's a preview of what we're about.</p>
+		<p class="message">For more information, call us at +91 9845001401</p>
+		<p><img src="images/weddingsnadwisheswebsiteposter.png"></p>
+		<p class="message">For your Mother's Day Gifting solution needs:</p>
+		<p class="message"><img src="images/mothersdaymotherdaughterposter.png"></p>
+	</center>
 </body>
-
 </html>
