--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 		</h1>
 
 		<p class="message">While we're working on our site, here's a preview of what we're about.</p>
-		<p class="message">For more information, call us at +91 9845001401</p>
-		<p><img src="images/weddingsnadwisheswebsiteposter.png"></p>
+		<p class="message">Weddings And Wishes is a one stop shop to all your wedding planning needs. We customize your dream wedding to suit your requirements, desires and price. We, at Weddings And Wishes, are inspired by your wedding story, always have your happiness in mind and strive to give you a hassle-free, well executed experience for the perfect wedding.</p>
+		<p class="message">We're looking forward to interacting with you!</p>
+		<p class="message">Mobile: +91 9845001401</p>
+		<p class="message">Email: info@weddingsandwishes.in</p>
+		<p class="message">Twitter: @weddingsnwishes</p>
+		<p><img class="big-poster" src="images/weddingsandwisheswebsiteposter.jpg"></p>
 		<p class="message">For your Mother's Day Gifting solution needs:</p>
-		<p class="message"><img src="images/mothersdaymotherdaughterposter.png"></p>
+		<p <img class="big-poster" src="images/mothersdaymotherdaughterposter.jpg"></p>
 	</center>
 </body>
 </html>
