--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<p class="message">Twitter: @weddingsnwishes</p>
 		<p><img class="big-poster" src="images/weddingsandwisheswebsiteposter.jpg"></p>
 		<p class="message">For your Mother's Day Gifting solution needs:</p>
-		<p <img class="big-poster" src="images/mothersdaymotherdaughterposter.jpg"></p>
+		<p> <img class="big-poster" src="images/mothersdaymotherdaughterposter.jpg"></p>
 	</center>
 </body>
 </html>
