--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		</h1>
 
 		<p class="message">While we're working on our site, here's a preview of what we're about.</p>
-		<p class="message">Weddings And Wishes is a one stop shop to all your wedding planning needs. We customize your dream wedding to suit your requirements, desires and price. We, at Weddings And Wishes, are inspired by your wedding story, always have your happiness in mind and strive to give you a hassle-free, well executed experience for the perfect wedding.</p>
+		<p class="message">Weddings And Wishes is a one stop shop to all your wedding planning needs. We customize your dream wedding to suit your requirements, desires and price. We, at Weddings And Wishes, are inspired by your wedding story, always have your happiness in mind and strive to give you a hassle-free, well executed experience for the perfect wedding.
+With our Gifting Solutions we create and deliver the perfect gift for any occasion, individual or corporate gifts and within a wide price range. Describe to us the person you're gifting to and we'll help you with sourcing, packaging and delivering that special token from you.</p>
 		<p class="message">We're looking forward to interacting with you!</p>
 		<p class="message">Mobile: +91 9741070035</p>
 		<p class="message">Email: info@weddingsandwishes.in</p>
