--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	<center>
 		<h1>
-			Welcome to Weddings and Wishes
+			Weddings and Wishes
 		</h1>
 
 		<p class="message">While we're working on our site, here's a preview of what we're about.</p>
