--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 		<p class="message">Mobile: +91 9741070035</p>
 		<p class="message">Email: info@weddingsandwishes.in</p>
 		<p class="message">Twitter: @weddingsnwishes</p>
-		<p class="messafe">Facebook: www.facebook.com/WeddingsAndWishes<p>
-		<p class="message">Facebook: 	</p>
+		<p class="message">Facebook: www.facebook.com/WeddingsAndWishes<p>
 	</center>
 </body>
 </html>
