--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@ Design by Free CSS Templates
 http://www.freecsstemplates.org
 Released for free under a Creative Commons Attribution 2.5 License
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.weddingsandwishes.in">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Weddings and Wishes</title>
