--- a/home.html
+++ b/home.html
@@ -4,8 +4,25 @@ Design by Free CSS Templates
 http://www.freecsstemplates.org
 Released for free under a Creative Commons Attribution 2.5 License
 -->
-<html xmlns="http://www.weddingsandwishes.in">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+<link rel="StyleSheet" href="css/styles.css" type="text/css">
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30565508-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Weddings and Wishes</title>
 <meta name="keywords" content="" />
@@ -34,11 +51,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 		
 	<div id="menu">
 		<ul>
-			<li class="active"><a href="file:///Users/kiransaldanha/Work/WWWebsite/home.html" accesskey="1" title="">Weddings</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/gifting.html" accesskey="2" title="">Gifting</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/our work.html" accesskey="3" title="">Our Work</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/about us.html" accesskey="4" title="">About Us</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/contact.html" accesskey="5" title="">Contact</a></li>
+			<li class="active"><a href="file:///Users/kiransaldanha/Work/Website/home.html" accesskey="1" title="">Weddings</a></li>
+			<li><a href="file:///Users/kiransaldanha/Work/Website/gifting.html" accesskey="2" title="">Gifting</a></li>
+			<li><a href="file:///Users/kiransaldanha/Work/Website/our work.html" accesskey="3" title="">Our Work</a></li>
+			<li><a href="file:///Users/kiransaldanha/Work/Website/about us.html" accesskey="4" title="">About Us</a></li>
+			<li><a href="file:///Users/kiransaldanha/Work/Website/contact.html" accesskey="5" title="">Contact</a></li>
 		</ul>
 	</div>
 	
