--- a/about us.html
+++ b/about us.html
@@ -30,7 +30,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 	</div>
 	<div id="menu">
 		<ul>
-			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/home.html" accesskey="1" title="">Weddings</a></li>
+			<li><a href="www.weddingsadnwishes.in" accesskey="1" title="">Weddings</a></li>
 			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/gifting.html" accesskey="2" title="">Gifting</a></li>
 			<li><a href="file:///Users/kiransaldanha/Work/WWWebsite/our work.html" accesskey="3" title="">Our Work</a></li>
 			<li class="active"><a href="file:///Users/kiransaldanha/Work/WWWebsite/about us.html" accesskey="4" title="">About Us</a></li>
