--- a/home.html
+++ b/home.html
@@ -44,14 +44,14 @@ Released for free under a Creative Commons Attribution 2.5 License
 <div id="header">
 
 	<div id="logo">
-		<h1><center><a href="#">Weddings and Wishes</a></center></h1>
+		<h1><center><a href="http://www.weddingsandwishes.in">Weddings and Wishes</a></center></h1>
 		<h2><a href="http://www.freecsstemplates.org/"></a></h2>
 		
 		</div>
 		
 	<div id="menu">
 		<ul>
-			<li class="active"><a href="file:///Users/kiransaldanha/Work/Website/home.html" accesskey="1" title="">Weddings</a></li>
+			<li class="active"><a href="http://www.weddingsandwishes.in" accesskey="1" title="">Weddings</a></li>
 			<li><a href="file:///Users/kiransaldanha/Work/Website/gifting.html" accesskey="2" title="">Gifting</a></li>
 			<li><a href="file:///Users/kiransaldanha/Work/Website/our work.html" accesskey="3" title="">Our Work</a></li>
 			<li><a href="file:///Users/kiransaldanha/Work/Website/about us.html" accesskey="4" title="">About Us</a></li>
