--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 		
 	<div id="menu">
 		<ul>
-			<li class="active"><a href="file:///Users/kiransaldanha/Work/Website/index.html" accesskey="1" title="">Weddings</a></li>
+			<li class="active"><a href="http://www.weddingsandwishes.in/index" accesskey="1" title="">Weddings</a></li>
 			<li><a href="http://www.weddingsandwishes.in/gifting" accesskey="2" title="">Gifting</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/Website/our work.html" accesskey="3" title="">Our Work</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/Website/about us.html" accesskey="4" title="">About Us</a></li>
-			<li><a href="file:///Users/kiransaldanha/Work/Website/contact.html" accesskey="5" title="">Contact</a></li>
+			<li><a href="http://www.weddingsandwishes.in/our work" accesskey="3" title="">Our Work</a></li>
+			<li><a href="http://www.weddingsandwishes.in/about us" accesskey="4" title="">About Us</a></li>
+			<li><a href="http://www.weddingsandwishes.in/contact" accesskey="5" title="">Contact</a></li>
 		</ul>
 	</div>
 	
