--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 </head>
 	<table width="100%">
 	<tr>
-		<td align="left"><iframe src="http://www.facebook.com/plugins/like.php?href=www.facebook.com/weddingsandwishes"
+		<td align="left"><iframe src="http://www.facebook.com/plugins/like.php?href= http://www.facebook.com/weddingsandwishes"
 		scrolling="no" frameborder="0"
 		style="border:none; width:500px; height:40px"></iframe>
        </td>
