--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 </head>
 <table width="100%">
 	<tr>
-		<td align="left"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fweddingsandwishes&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:25px;" allowTransparency="true"></iframe>
+		<td align="left"<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fweddingandwishes&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:35px;" allowTransparency="true"></iframe>
        </td>
 		<td align="right"><a href="http://www.facebook.com/WeddingsAndWishes"><img src="images/facebook.png" alt="" width="25" height=25/></a>&nbsp&nbsp<a href="http://www.twitter.com/WeddingsnWishes"><img src="images/twitter.png" alt="" width="25" height="25"/></a>&nbsp</td>
 	</tr>
