--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<link href="default.css" rel="css/styles.css" type="text/css"/>
+<link rel="default.css" href="stylesheet" type="text/css"/>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
