--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@ Released for free under a Creative Commons Attribution 2.5 License
 </script>
 
 
+
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Weddings and Wishes</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="default.css" rel="stylesheet" type="text/css" />
+<link href="default.css" rel="css/styles.css" type="text/css" />
 </head>
 	<table width="100%">
 	<tr>
