--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 <title>Weddings and Wishes</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="default.css" rel="css/styles.css" type="text/css" />
+<link href="styles.css" rel="css/styles.css" type="text/css" />
 </head>
 	<table width="100%">
 	<tr>
