--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-
+<link rel="stylesheet" href="css/styles.css" type="text/css"/>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -28,7 +28,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 <title>Weddings and Wishes</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="css/styles.css" rel="css/styles.css" type="text/css" />
+<link href="default.css" rel="css/styles.css" type="text/css" />
 </head>
 	<table width="100%">
 	<tr>
