--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<link rel="stylesheet" href="css/styles.css" type="text/css"/>
+<link rel="StyleSheet" href="css/styles.css" type="text/css">
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -23,12 +23,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 </script>
 
 
-
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Weddings and Wishes</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="default.css" rel="css/styles.css" type="text/css" />
+<link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 	<table width="100%">
 	<tr>
