--- a/contact.html
+++ b/contact.html
@@ -136,11 +136,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 				Email: info@weddingsandwishes.in<br/><br/>
 
-				Twitter: <a href="file:///Users/kiransaldanha/Work/WWWebsite/home.html" accesskey="1" title="">@weddingsnwishes</a><br/><br/>
+				Twitter: <a href="http://www.twitter.com/WeddingsnWishes" accesskey="1" title="">@weddingsnwishes</a><br/><br/>
 
-				Facebook: <a href="file:///Users/kiransaldanha/Work/WWWebsite/home.html" accesskey="1" title="">www.facebook.com/weddingsandwishes</a><br/><br/>
+				Facebook: <a href="http://www.facebook.com/WeddingsAndWishes" accesskey="1" title="">www.facebook.com/weddingsandwishes</a><br/><br/>
 
-				Website: <a href="www.weddingsandwishes.in" accesskey="1" title="">www.weddingsandwishes.in</a><br/><br/>
+				Website: <a href="http://www.weddingsandwishes.in" accesskey="1" title="">www.weddingsandwishes.in</a><br/><br/>
 				</p>
 				
 				
