--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			
 			<div class="story">
 				
-			<p><form name="htmlform" method="post" action="html_form_send.php">
+			<p><form name="htmlform" method="post" >
 
 			<table width="500px">
 			</tr>
