--- a/aboutus.html
+++ b/aboutus.html
@@ -59,7 +59,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 				<!--p><span>Filed under </span><a href="#" class="category">Uncategorized</a><span> | </span><a href="#" class="comments">28 Comments</a></p-->
 			
 			<div class="story">
-				<p>Weddings and Wishes is a venture founded by business consultant, engineer, entrepreneur and recent bride, Kiran Saldanha. We, at Weddings and Wishes understand and have been through the difficulties of wedding planning and gifting and want to share our experience, contacts and organizational skills just so you don't have go through it all! Together with the team at Wedding and Wishes, Kiran has planned and executed several weddings and other occasions over the years. Ask us for our advice and creativity to help make weddings and gifting beautiful!</p>
+				<p>Weddings and Wishes is a venture initited by business consultant, engineer, entrepreneur and recent bride, Kiran Saldanha. We, at Weddings and Wishes understand and have been through the difficulties of wedding planning and gifting and want to share our experience, contacts and organizational skills just so you don't have go through it all! The team at Wedding and Wishes, has planned and executed several weddings and other occasions over the years. Ask us for our advice and creativity to help make weddings and gifting beautiful!</p>
 
 			</div>
 			
