--- a/gifting.html
+++ b/gifting.html
@@ -12,36 +12,28 @@ Released for free under a Creative Commons Attribution 2.5 License
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
-<table width="100%">
-	<tr>
-		<td align="left"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fweddingsandwishes&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:40px;" allowTransparency="true"></iframe>
-       </td>
-		<td align="right"><a href="http://www.facebook.com/WeddingsAndWishes"><img src="images/facebook.png" alt="" width="25" height=25/></a>&nbsp&nbsp<a href="http://www.twitter.com/WeddingsnWishes"><img src="images/twitter.png" alt="" width="25" height="25"/></a>&nbsp</td>
-	</tr>
-	</table>
-
 <body>
 <div id="header">
 	<div id="logo">
-		<h1><center><a href="#">Weddings and Wishes</a></center></h1>
+		<h1><a href="#">Weddings and Wishes</a></h1>
 		<h2><a href="http://www.freecsstemplates.org/"></a></h2>
 	</div>
 	<div id="menu">
 		<ul>
-			<li><a href="http://www.weddingsandwishes.in/index" accesskey="1" title="">Weddings</a></li>
-			<li class="active"><a href="http://www.weddingsandwishes.in/gifting" accesskey="2" title="">Gifting</a></li>
-			<li><a href="http://www.weddingsandwishes.in/ourwork" accesskey="3" title="">Our Work</a></li>
-			<li><a href="http://www.weddingsandwishes.in/aboutus" accesskey="4" title="">About Us</a></li>
-			<li><a href="http://www.weddingsandwishes.in/contact" accesskey="5" title="">Contact</a></li>
+			<li class="active"><a href="#" accesskey="1" title="">Weddings</a></li>
+			<li><a href="http://weddingsandwishes.in/Gifting" accesskey="2" title="">Gifting</a></li>
+			<li><a href="#" accesskey="3" title="">Our Work</a></li>
+			<li><a href="#" accesskey="4" title="">About Us</a></li>
+			<li><a href="#" accesskey="5" title="">Contact</a></li>
 		</ul>
 	</div>
 </div>
 <div id="gallery">
 	<div id="top-photo">
 		<h2></h2>
-		<p><a><center> <img src="images/img32.png" alt="" width="525" height="299" /></a></p>
+		<p><a href="#"><center> <img src="images/img04.png" alt="" width="525" height="299" /></a></p>
 	</div>
-	<div id="recent-photos"><center><span id="thumbs"><center><a ><img src="images/img35.png" alt="" width="90" height="84" /></a><a ><img src="images/img38.png" alt="" width="90" height="84" /></a><a ><img src="images/img40.png" alt="" width="90" height="84" /></a><a ><img src="images/img41.png" alt="" width="80" height="84" /></a><a><img src="images/img37.png" alt="" width="90" height="84" /></a><a ><img src="images/img39.png" alt="" width="90" height="84" /></a></span></div>
+	<div id="recent-photos"><center><a href="#" id="prev"><span>&laquo; Previous</span></a><span id="thumbs"><a href="#"><img src="images/img06.png" alt="" width="90" height="84" /></a><a href="#"><img src="images/img14.png" alt="" width="90" height="84" /></a><a href="#"><img src="images/img23.png" alt="" width="90" height="84" /></a><a href="#"><img src="images/img24.png" alt="" width="80" height="84" /></a><a href="#"><img src="images/img10.png" alt="" width="90" height="84" /></a><a href="#"><img src="images/img05.png" alt="" width="90" height="84" /></a></span><a href="#" id="next"><span>Next &raquo;</span></a></div>
 </div>
 <div id="content">
 	<div id="posts">
@@ -81,48 +73,66 @@ While occasions are special, gifting for them are a challenge.</p>
 					<p>Why hiring a professional is good for your gifting:</p>
 				</blockquote>
 				<ol>
-					<li>Gifting for special occasions is important and you want the receiver to be ecstatic with what they’ve got</li>
-					<li>You want to enjoy a hassle-free experience knowing that the gift hunting is in the able hands of a professional</li>
-					<li>You’ve got experienced gifting experts from the business with the best contacts and relationships with providers; looking out for deals they can pass on to you</li>
-					<li>You’ve got professional help to scout around for the best gift ideas and get creative with solutions</li>
-					<li>See the difference when you gift a thoughtful, well presented, beautiful gift to the person you care for</li>
-					<li>Get reminders every year for the occasion</li>
+					<li>A wedding is a special occasion and you want nothing but the best, executed to perfection</li>
+					<li>You want to enjoy a hassle-free experience for you and your family knowing that the planning is in the able hands of a professional</li>
+					<li>You’ve got experienced planners from the wedding business with the best contacts and relationships with providers; looking out for deals they can pass on to you</li>
+					<li>You’re able to set aside much-needed time for yourself during the hectic last few weeks</li>
+					<li>Engage professionals who are honest, transparent, cost-effective and don’t charge a percentage of total costs</li>
+					<li>Be introduced to and get used to being pampered by planners whose sole purpose is your happiness at the wedding</li>
 				</ol>
 			</div>
 		</div>
 	</div>
 	<div id="sidebar">
 		<div id="archives" class="boxed">
-			<h2>Gifting Options</h2>
+			<h2>Design, Conceptualization and Execution</h2>
 			<div class="content">
 				<ul>
-					<li>Adventure Sports<i></i></li>
-					<li class="active">Weekend Getaways</li>
-					<li>Classes - Dance, Music, Cooking and more</li>
-					<li>Chocolate Hampers</li>
-					<li>Financial Advice</li>
-					<li>Healthcare Advice</li>
-					<li>Pamper Your Senses</li>
-					<li>Tea/Coffee At A Star Hotel</li>
-					<li>Dinner/Lunch</li>
-					<li>Tickets - Movie and Theatre</li>
-					<li>Personalized Message Ideas</li>
-					<li>Parties</li>
-					<li>Men's Accessories</li>
-					<li>Men's Clothing</li>
-					<li>Games</li>
-					<li>Women's Accessories</li>
-					<li>Women's Clothing</li>
-					<li>Flowers</li>
-					<li>Books</li>
-					<li>Theme Getaways</li>
-					<li>Desert And Cake</li>
-					<li>Electronics</li>
-					<li>Furniture And Furnishings</li>
-					<li>Kitchenware</li>
-					<li>Jewellery</li>
-					<li>Home Solutions</li>
-					<li>Bed, Bath And More</li>
+					<li>Venue Selection and Booking<i></i></li>
+					<li class="active">Decor</li>
+					<li>Stage and Mantap Design</li>
+					<li>Light and Sound</li>
+					<li>Performances</li>
+					<li>Invitations</li>
+					<li>Giveaways</li>
+					<li>Bachelor/Bachelorette Parties</li>
+					<li>Pre-wedding Ceremonies</li>
+				</ul>
+			</div>
+		</div>
+		<div id="categories" class="boxed">
+			<h2>Vendor Engagement and Co-ordination</h2>
+			<div class="content">
+				<ul>
+					<li>Catering</li>
+					<li>Make-up and Hair</li>
+					<li>Nutrician and Dietician</li>
+					<li>Ceremonial Musicians and DJs</li>
+					<li>Videographer and Photographer</li>
+					<li class="active">Valets and Drivers</li>
+					<li>Transport Logistics</li>
+					<li>Guest Accommodation and Co-ordination</li>
+					<li>Gifting Solutions</li>
+				</ul>
+			</div>
+		</div>
+		<div id="categories" class="boxed">
+			<h2>Clothing and Trouseau</h2>
+			<div class="content">
+				<ul>
+					<li>Women's Clothing - Ethnic and International</li>
+					<li>Men's Clothing - Ethnic and International</li>
+					<li>Accessories - Ethnic and International</li>
+				</ul>
+			</div>
+		</div>
+		<div id="categories" class="boxed">
+			<h2>Post Wedding Services</h2>
+			<div class="content">
+				<ul>
+					<li>Honeymoon Planning</li>
+					<li>Housing Solutions</li>
+					<li>Anniversary Gifting</li>
 				</ul>
 			</div>
 		</div>
@@ -133,7 +143,7 @@ While occasions are special, gifting for them are a challenge.</p>
 	</div>
 </div>
 <div id="footer">
-	<p id="copy">Copyright &copy;  2012 Weddings and Wishes. All rights reserved.</p>
+	<p id="copy">&copy;2012 Weddings and Wishes. Designed by <a href="#">CSS Templates</a></p>
 </div>
 </body>
 </html>
