--- a/gifting.html
+++ b/gifting.html
@@ -129,7 +129,7 @@ While occasions are special, gifting for them are a challenge.</p>
 					<li>Flowers</li>
 					<li>Books</li>
 					<li>Theme Getaways</li>
-					<li>Desert And Cake</li>
+					<li>Dessert And Cake</li>
 					<li>Electronics</li>
 					<li>Furniture And Furnishings</li>
 					<li>Kitchenware</li>
