--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ While weddings are special, sacred occasions, they’re also an operational chal
 				<ul>
 					<li>Catering</li>
 					<li>Make-up and Hair</li>
-					<li>Nutrician and Dietician</li>
+					<li>Nutritionist and Dietician</li>
 					<li>Ceremonial Musicians and DJs</li>
 					<li>Videographer and Photographer</li>
 					<li class="active">Valets and Drivers</li>
